# gametracker

./: .gitignore  README.md  pyproject.toml
src/gametracker/: cli.py  client.py  db.py  history.py  matcher.py  normalize.py  price.py  render.py  runner.py  schema_org.py
src/gametracker/sites/: __init__.py  altex.py  buy2play.py  emag.py  flanco.py  jocurinoi.py  ozone.py  psstore.py  trendyol.py  types.py
tests/: test_altex_discount.py  test_matcher.py  test_normalize.py  test_price.py  test_schema_org.py  test_scrapers_fixtures.py
tests/fixtures/: altex_stellar_blade.json  buy2play_resident_evil.json  jocurinoi_requiem.html  ozone_requiem.json  psstore_astro_bot.html
