[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gametracker"
version = "0.1.0"
description = "Romanian game price tracker CLI (PS5)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "curl_cffi>=0.7",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "tenacity>=8.5",
    "selectolax>=0.3",
    "plotext>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
gametracker = "gametracker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gametracker = ["py.typed"]
